Fix scroll effect. Now menu is not covering section headers. Code refactoring.

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body {
 .hero-content h1 {
     margin-top: 0;
 }
+
 h1 > small {
     display: block;
 }
@@ -42,28 +43,31 @@ h1 > small {
     font-size: 20px;
     z-index: 1000000000;
 }
+
 .navbar-fixed-top {
     top: 0;
     border-width: 0 0 0 0;
 }
-.navbar-default .navbar-nav>li>a
-{
+
+.navbar-default .navbar-nav > li > a {
     color: #000a91;
 }
-.navbar-default .navbar-nav>li>a:hover
-{
+
+.navbar-default .navbar-nav > li > a:hover {
     color: #000a91;
     background-color: #fff;
 
 }
-.navbar-default .navbar-nav>li>a:active
-{
+
+.navbar-default .navbar-nav > li > a:active {
     color: #af000a;
     background-color: #fff;
 }
+
 #hero {
     position: relative;
 }
+
 .hero-content {
     height: 0;
     position: relative;
@@ -71,13 +75,21 @@ h1 > small {
     color: #004276;
     z-index: 100000000;
 }
+
 .hero-text, .hero-content > a {
-    transform: translate(0px,35vh);
+    transform: translate(0px, 35vh);
+}
+
+#features,
+#authors,
+#contact {
+    padding-top: 20px;
 }
 
 #features > .col-lg-12 .top1 > .col-lg-6 .col-md-6 .col-sm-6 .col-xs-12 {
     position: relative;
 }
+
 #features i.fa {
     position: absolute;
     top: 15px;
@@ -94,10 +106,12 @@ h1 > small {
     z-index: 1000;
     opacity: 0.9;
 }
-#cookieInfo p{
+
+#cookieInfo p {
     padding: 10px 30px;
 }
-#cookieInfo span{
+
+#cookieInfo span {
     position: absolute;
     font-size: 22px;
     color: black;
@@ -118,10 +132,12 @@ h1 > small {
     max-width: 100%;
     max-height: 300px;
 }
+
 .thumbnail img {
     width: 252.500px;
     height: 167.688px;
 }
+
 #contact .btn {
     padding: 8px 30px;
     margin: 5px;
@@ -139,12 +155,15 @@ footer {
 
     .hero-text, .hero-content > a {
         transform: translate(0px, 40vh)
-    }}
+    }
+}
+
 @media only screen and (min-width: 1025px) {
 
     .hero-text, .hero-content > a {
         transform: translate(0px, 38vh)
     }
+
     .zoom {
         -webkit-transition: all 0.35s ease-in-out;
         -moz-transition: all 0.35s ease-in-out;
@@ -153,6 +172,7 @@ footer {
         cursor: -moz-zoom-in;
         cursor: zoom-in;
     }
+
     .zoom:hover,
     .zoom:active,
     .zoom:focus {
@@ -163,10 +183,11 @@ footer {
         -webkit-transform: scale(1.5);
         -o-transform: scale(1.5);
         transform: scale(1.5);
-        position:relative;
-        z-index:100;
+        position: relative;
+        z-index: 100;
     }
 }
+
 #contact_info {
     background-color: rgba(240, 240, 240, 0.5);
     position: absolute;
@@ -176,18 +197,22 @@ footer {
     text-align: left;
     transition: background-color .5s ease-in-out;
 }
+
 #contact_info:hover {
     background-color: rgba(240, 240, 240, 1);
 }
+
 img.map {
     position: relative;
 }
+
 hr.separator {
     margin-bottom: 0;
     border: 0;
     height: 1px;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
 }
+
 .thumbnail {
     height: 45rem;
 }
@@ -195,6 +220,7 @@ hr.separator {
 footer p {
     text-align: center;
 }
+
 #footer_menu a {
     display: block;
     float: left;
@@ -210,6 +236,7 @@ footer p {
     -webkit-transition-duration: .3s;
     transition-duration: .3s
 }
+
 #footer_menu a:before {
     content: "";
     position: absolute;
@@ -230,25 +257,30 @@ footer p {
     -webkit-transition-timing-function: ease-out;
     transition-timing-function: ease-out
 }
+
 #footer_menu a:active, #footer_menu a:focus, #footer_menu a:hover {
     color: #fff;
 }
+
 #footer_menu a:active:before, #footer_menu a:focus:before, #footer_menu a:hover:before {
     -webkit-transform: scaleY(1);
     transform: scaleY(1);
 }
-@media screen and (min-width:615px) and (max-width:991px) {
+
+@media screen and (min-width: 615px) and (max-width: 991px) {
     #contact_info {
         left: 50%;
         transform: translateX(-50%);
     }
 }
+
 @media screen and (min-width: 992px) and (max-width: 1199px) {
     .thumbnail {
         height: 53rem;
     }
 }
-@media(max-width:768px) {
+
+@media (max-width: 768px) {
     .navbar-default {
         background: #f0f0f0;
         font-size: 14px;
@@ -257,8 +289,9 @@ footer p {
     footer {
         text-align: center;
     }
+
     .thumbnail {
-        height:auto;
+        height: auto;
     }
 }
 
@@ -270,14 +303,17 @@ footer p {
     z-index: 99;
     transition: opacity .5s ease-in-out;
 }
+
 #topBtn.active {
-    color: rgb(51,122,183);
+    color: rgb(51, 122, 183);
     opacity: 0.8;
 }
+
 #topBtn.active:hover {
-    color: rgb(35,80,120);
+    color: rgb(35, 80, 120);
     opacity: 1;
 }
+
 /* Buzz Out */
 @-webkit-keyframes hvr-buzz-out {
     10% {
@@ -321,6 +357,7 @@ footer p {
         transform: translateX(-1px) rotate(0);
     }
 }
+
 @keyframes hvr-buzz-out {
     10% {
         -webkit-transform: translateX(3px) rotate(2deg);
@@ -363,6 +400,7 @@ footer p {
         transform: translateX(-1px) rotate(0);
     }
 }
+
 .hvr-buzz-out {
     display: inline-block;
     vertical-align: middle;
@@ -370,6 +408,7 @@ footer p {
     transform: perspective(1px) translateZ(0);
     box-shadow: 0 0 1px transparent;
 }
+
 .hvr-buzz-out:hover, .hvr-buzz-out:focus, .hvr-buzz-out:active {
     -webkit-animation-name: hvr-buzz-out;
     animation-name: hvr-buzz-out;
@@ -380,6 +419,7 @@ footer p {
     -webkit-animation-iteration-count: 1;
     animation-iteration-count: 1;
 }
+
 @-webkit-keyframes hvr-pulse {
     25% {
         -webkit-transform: scale(1.1);
@@ -390,6 +430,7 @@ footer p {
         transform: scale(0.9);
     }
 }
+
 @keyframes hvr-pulse {
     25% {
         -webkit-transform: scale(1.1);
@@ -400,6 +441,7 @@ footer p {
         transform: scale(0.9);
     }
 }
+
 .hvr-pulse {
     display: inline-block;
     vertical-align: middle;
@@ -407,6 +449,7 @@ footer p {
     transform: perspective(1px) translateZ(0);
     box-shadow: 0 0 1px transparent;
 }
+
 .hvr-pulse:hover, .hvr-pulse:focus, .hvr-pulse:active {
     -webkit-animation-name: hvr-pulse;
     animation-name: hvr-pulse;
@@ -417,6 +460,7 @@ footer p {
     -webkit-animation-iteration-count: infinite;
     animation-iteration-count: infinite;
 }
+
 .hvr-round-corners {
     display: inline-block;
     vertical-align: middle;
@@ -428,11 +472,10 @@ footer p {
     -webkit-transition-property: border-radius;
     transition-property: border-radius;
 }
+
 .hvr-round-corners:hover, .hvr-round-corners:focus, .hvr-round-corners:active {
     border-radius: 1em;
 }
-
-
 
 nav a {
     font-size: 18px;
@@ -496,13 +539,15 @@ nav.navbar.shrink .navbar-toggle {
         left: 0;
         font-size: large;
     }
+
     #social_media a:hover {
         font-size: xx-large;
         transition: all 0.4s ease-in-out;
     }
 }
+
 @media screen and (max-width: 768px) {
     #copywright {
-       height: 5rem;
+        height: 5rem;
     }
 }
